fix some annoying mobile layout bugs

--- a/_src/styles/layouts/_page.scss
+++ b/_src/styles/layouts/_page.scss
@@ -3,7 +3,7 @@
 	@extend %clearfix;
 	margin-right: auto;
 	margin-left: auto;
-	padding: 1rem;
+	padding: 10px;
 	width: 100%;
 	max-width: 38rem;
 	@include media($mobile) {
