--- a/_src/styles/layouts/_single.scss
+++ b/_src/styles/layouts/_single.scss
@@ -70,7 +70,7 @@
 
 .side-bar .advert {
 	width: 100%;
-	float: right;
+	// float: right;
 	&:not(:last-child) {
 		margin-bottom: 2rem;
 	}
