--- a/_src/styles/modules/_adverts.scss
+++ b/_src/styles/modules/_adverts.scss
@@ -1,7 +1,7 @@
 // ********** MODULE **********
 
 .advert {
-	padding: 0 $advert-border-width $advert-border-width;
+	padding: 0;
 	background-color: $advert-bg;
 	text-align: center;
 	font-size: 0;
@@ -15,6 +15,9 @@
 		content: 'Advertisement';
 		text-transform: uppercase;
 		font-size: .6rem;
+	}
+	@include media($mobile) {
+		padding: 0 $advert-border-width $advert-border-width;
 	}
 }
 
