--- a/_src/styles/modules/_digest.scss
+++ b/_src/styles/modules/_digest.scss
@@ -5,8 +5,8 @@
 
 .digest h3 {
 	display: none;
-	text-align: center;
 	margin-bottom: 1rem;
+	text-align: center;
 }
 
 .digest-sections {
@@ -19,32 +19,34 @@
 .digest-section-title {
 	@extend .category-name;
 	@extend %font-s;
+	@include media($desktop) {
+		&:after {
+			position: absolute;
+			top: 0;
+			right: -.15em;
+			display: flex;
+			height: 100%;
+			align-items: center;
+			justify-content: center;
+			content: '∙';
+		}
+	}
+
 	position: relative;
 	display: flex;
 	height: 2rem;
 	align-items: center;
 	justify-content: center;
 	border-bottom: 1px solid $black;
-	flex-grow: 1;
 	cursor: pointer;
+	flex-grow: 1;
 	&.is-active, &:hover {
 		background-color: $black;
 		color: $white;
 		&:after {
 			content: '';
 		}
-	}
-	&:after {
-		position: absolute;
-		top: 0;
-		right: -.15em;
-		display: flex;
-		height: 100%;
-		align-items: center;
-		justify-content: center;
-		content: '∙';
-	}
-	&:last-of-type {
+	}&:last-of-type {
 		&:after {
 			content: '';
 		}
@@ -69,11 +71,28 @@
 	@extend .post-title;	display: block;
 }
 
-.digest-section li {
-	border-bottom: 1px dotted $black;
-	padding: .5em 0;
-	&:last-child {
+.digest-section li:not(.puff) {
+	@include media($desktop) {
+		padding-right: 0;
+		padding-left: 0;
+		width: 100%;
+		&:nth-child(n+2) {
+			border-style: dotted;
+		}
+	};
+	float: left;
+	padding: .5em 0rem .5rem .5rem;
+	width: 50%;
+	border-top: 1px solid $black;
+	&:nth-child(odd) {
+		clear: left;
+		padding-right: .5rem;
+		padding-left: 0;
+	}
+	&:nth-child(-n+2) {
 		border-style: none;
+	}
+	&:last-child {
 		padding-bottom: 0;
 	}
 }
@@ -86,12 +105,11 @@
 	li {
 		@include puff-cols(2);
 		@include media($tablet) {
-			@include puff-cols(3);
+			@include puff-cols(4);
 		}
 		@include media($desktop) {
 			@include puff-cols(2);
 		}
-		border: none;
-		padding-top: 0;
+		padding-top: 0;border: none;
 	}
 }
