--- a/_src/styles/modules/_post.scss
+++ b/_src/styles/modules/_post.scss
@@ -108,11 +108,14 @@
 
 .post-content .advert {
 	margin-top: .5rem;
+	margin-bottom: .5rem;
 	padding-left: 0;
 	padding-right: 0;
 	padding-bottom: 0;
 	@include media($mobile) {
 		padding: $advert-border-width;
+		padding-top: 0;
+		margin-bottom: 0;
 		&:nth-of-type(even) {
 			float: left;
 			margin-right: 1rem;
@@ -128,6 +131,7 @@
 }
 
 .post-related {
+	@include grid-row($puffs-gutter-width);
 	margin-bottom: 2rem;
 	padding-top: 2rem;
 	width: 100%;
